--- a/views/index.html
+++ b/views/index.html
@@ -5,20 +5,18 @@
      <title>File Metadata Microservice | Free Code Camp</title>
      <meta name="description" content="File metadata microservice.">
      <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link href="/style.css" rel="stylesheet" type="text/css">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+     <link href="/style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
       <div class="container">
          <h1>Upload a file and get its size.</h1>
-         <form action="/" method="post">
-         <label for="selectFile">Select file</label>
-            <input type="file" id="selectFile" name="selectFileInput">
-            <label for="filename">Enter filename</label>
-            <input type="text" id="filename" type="text" name="filenameInput">
+         <form action="/" method="post" enctype="multipart/form-data">
+            <label for="file">Select file</label>
+            <input type="file" id="file" name="file">
             <input type="submit" value="Send" id="sendBtn">
          </form>
       </div>
