--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-html {
+html, body {
 	height: 100%;
 	margin: 0;
 }
@@ -9,15 +9,11 @@ body {
 	color: #222;
 	background-color: #ECF0F1;
 	text-align: center;
-	height: 100%;
-	margin: 0;
 }
 
 .container {
 	padding: 0;
-	margin-top: 40px;
 	min-height: 100%;
-	padding-bottom: 50px;
 }
 
 footer {
